[package]
name = "aranya-metrics"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[lints]
workspace = true


[features]
default = []

aqc = ["aranya-client/aqc", "aranya-client/experimental"]

datadog = ["dep:metrics-exporter-dogstatsd"]
prometheus = ["dep:metrics-exporter-prometheus"]
tcp = ["dep:metrics-exporter-tcp"]


[dependencies]
aranya-client = { workspace = true }
aranya-daemon-api = { workspace = true }
aranya-util = { workspace = true }
buggy = { workspace = true }

# Required Dependencies
anyhow = { workspace = true }
backon = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
libc = { workspace = true }
metrics = { workspace = true }
metrics-util = { workspace = true }
serde = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["process"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Optional Dependencies
metrics-exporter-dogstatsd = { version = "0.9", optional = true }
metrics-exporter-prometheus = { version = "0.17", optional = true, features = ["uds-listener"] }
metrics-exporter-tcp = { version = "0.11", optional = true }


[[bin]]
name = "aranya-metrics"
path = "src/main.rs"
required-features = ["aqc"]
test = false
bench = false
