[package]
name = "aranya-util"
description = "Utilities needed by other Aranya crates"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[lints]
workspace = true


[features]
default = []


[dependencies]
buggy = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
s2n-quic = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "net",
] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }


[dev-dependencies]
tokio = { workspace = true, features = ["time"] }
tokio-util = { workspace = true, features = ["time"] }
