[package]
name = "daemon-api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true


[lints]
workspace = true


[dependencies]
crypto = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
tarpc = { workspace = true }
thiserror = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["postcard"]
