[package]
name = "daemon"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true


[lints]
workspace = true


[dependencies]
aps-util = { workspace = true }
buggy = { workspace = true }
crypto = { workspace = true }
crypto-ffi = { workspace = true }
device-ffi = { workspace = true }
envelope-ffi = { workspace = true }
idam-ffi = { workspace = true }
perspective-ffi = { workspace = true }
policy-compiler = { workspace = true }
policy-ifgen = { workspace = true }
policy-lang = { workspace = true }
policy-vm = { workspace = true }
postcard = { workspace = true }
runtime = { workspace = true }

aps = { workspace = true }

anyhow = { workspace = true }
ciborium = { workspace = true }
clap = { workspace = true }
daemon-api = { workspace = true }
deser-hjson = { version = "2" }
futures-util = { workspace = true }
keygen = { workspace = true }
serde = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "io-util",
    "fs",
    "macros",
    "net",
    "sync",
    "time",
] }
tokio-util = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[dev-dependencies]
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
test-util = { path = "./test-util" }


[build-dependencies]
policy-ifgen-build = { workspace = true }


[[bin]]
name = "daemon"
path = "src/main.rs"
test = false


[[test]]
name = "tests"
path = "tests/tests.rs"
