[package]
name = "transport"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true


[lints]
workspace = true


[features]
default = []
quic = [
    "dep:postcard",
    "dep:quinn",
    "dep:rcgen",
    "dep:rustls",
    "dep:tokio-retry",
    "tokio/fs",
    "tokio/macros",
]
tcp = ["tokio/io-util", "tokio/sync", "tokio/time"]
udp = []


[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["net"] }
tracing = { workspace = true }

# quic deps
postcard = { workspace = true, optional = true }
quinn = { workspace = true, optional = true }
rcgen = { workspace = true, features = ["x509-parser"], optional = true }
rustls = { workspace = true, optional = true }
tokio-retry = { workspace = true, optional = true }


[dev-dependencies]
test-log = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
