[package]
name = "{{project-name}}"
description = "Example Rust program using the Aranya client library"
version = "0.1.0"
authors = ["SpiderOak, Inc."]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/aranya-project/aranya"
rust-version = "1.81"

[workspace]

[lints.rust]
# missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.clippy]
cast_lossless = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
panic = "warn"
unsafe_derive_deserialize = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"

[dependencies]
# To allow `cargo-generate` to work, explicitly define dependency versions rather than importing the repo's workspace `Cargo.toml`.
aranya-client = { version = "0.5.0" }
aranya-daemon = { version = "0.5.0" }
aranya-daemon-api = { version = "0.5.0" }
aranya-util = { version = "0.5.0" }

anyhow = { version = "1.0.94" }
backon = { version = "1.3.0" }
tempfile = { version = "3.14.0" }
tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "sync"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[bin]]
name = "aranya-example"
path = "src/main.rs"
test = false
