[package]
name = "test-util"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true


[dependencies]
aranya-crypto = { workspace = true, features = ["alloc", "fs-keystore", "std"] }
aranya-runtime = { workspace = true }

aranya-daemon = { workspace = true }
aranya-keygen = { workspace = true }

anyhow = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
