[package]
name = "test-util"
description = "Test utilities for the daemon"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
aranya-crypto = { workspace = true, features = ["alloc", "fs-keystore", "std"] }
aranya-runtime = { workspace = true }
aranya-util = { workspace = true }

aranya-daemon = { workspace = true }
aranya-daemon-api = { workspace = true }
aranya-keygen = { workspace = true }

anyhow = { workspace = true }
rustls = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
