[package]
name = "aranya-example-common"
description = "Shared utilities for Aranya examples"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
age = { version = "0.11.1" }
anyhow = { workspace = true }
