[package]
name = "aranya-example-multi-node"
description = "Example of how run each Aranya device on a different node"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []

# Enable debugging.
debug = []

[dependencies]
aranya-client = { workspace = true }
aranya-daemon-api = { workspace = true }
aranya-util = { workspace = true }

anyhow = { workspace = true }
backon = { workspace = true }
buggy = { workspace = true, features = ["std"] }
bytes = { workspace = true }
clap = { workspace = true }
futures-lite = { workspace = true }
futures-util = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
test-log = { workspace = true }

[[bin]]
name = "aranya-example-multi-node"
path = "src/bin/main.rs"
test = false

[[bin]]
name = "aranya-example-multi-node-owner"
path = "src/owner/main.rs"
test = false

[[bin]]
name = "aranya-example-multi-node-admin"
path = "src/admin/main.rs"
test = false

[[bin]]
name = "aranya-example-multi-node-operator"
path = "src/operator/main.rs"
test = false

[[bin]]
name = "aranya-example-multi-node-membera"
path = "src/membera/main.rs"
test = false

[[bin]]
name = "aranya-example-multi-node-memberb"
path = "src/memberb/main.rs"
test = false

[[test]]
name = "tests"
path = "tests/tests.rs"
